--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
         "Никогда не обесценивай себя",
         "Ты самое ценное, что есть у этого мира",
         "и у меня",
-        "С ДНЕМ РОЖДЕНИЯЯЯЯ ЗВЁЗДОЧКАА"
+        "Теперь ты уже совсем тётя!!!",
+        "Ты можешь...Грабить банки и седлать инопланетянинов?",
+        "Или просто не волноваться по поводу того что ты взрослая и двигаться дальше",
+        "В любом случае я всегда буду рядом :)",
+        "так что не переживай, моя милая Тигровая Лилия",
+        "*стикер с милым мальчиком-зайчиком в шапочке и тильняшке который тебя очень сильно любит*",
+        "С ДНЕМ РОЖДЕНИЯЯЯЯ, ЗВЁЗДОЧКАА!!!!!!"
       ];
 
       let idx = 0;
