--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <button id="pwOkBtn">Войти</button>
         <button id="pwCancelBtn">Отмена</button>
       </div>
-      <div class="pw-hint">Если у вас есть пароль — введите его. Подсказка: обратитесь к отправителю.</div>
+      <div class="pw-hint">Подсказка: Моя открытка!!</div>
     </div>
   </div>
 
